# opendal-examples

./: Cargo.toml  README.md
examples/: http_read.rs  local_fs.rs  read_dynamic.rs
src/: main.rs
