[package]
name = "opendal-examples"
version = "0.1.0"
edition = "2021"
authors = ["Duyet <me@duyet.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
opendal = "0.39.0"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.4.1"
